--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <meta name="author" content="John Muschelli" />
 
-<meta name="date" content="2015-09-15" />
+<meta name="date" content="2015-09-18" />
 
 <title>JHSPH Student Finance FAQ</title>
 
@@ -73,7 +73,7 @@ img {
 <div id="header">
 <h1 class="title">JHSPH Student Finance FAQ</h1>
 <h4 class="author"><em>John Muschelli</em></h4>
-<h4 class="date"><em>2015-09-15</em></h4>
+<h4 class="date"><em>2015-09-18</em></h4>
 </div>
 
 
@@ -205,10 +205,10 @@ img {
 <p><div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#payday">8. What's the difference between hourly and salary payments?</a>
+                    <a data-toggle="collapse" data-parent="#accordion" href="#hourly_salary">8. What's the difference between hourly and salary payments?</a>
                 </h4>
             </div>
-            <div id="payday" class="panel-collapse collapse ">
+            <div id="hourly_salary" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <p>This is one of the most confusing concepts. Most importantly, at the end of the year <em>YOU WILL GET THE SAME AMOUNT OF MONEY</em> if you work the same number of hours at a fixed rate.</p>
@@ -240,10 +240,10 @@ Number of hours/week × wage per hour × 52 weeks / 26 weeks
 <p><div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#payday">8. Can you have different wages/rates for different jobs?</a>
+                    <a data-toggle="collapse" data-parent="#accordion" href="#wages">8. Can you have different wages/rates for different jobs?</a>
                 </h4>
             </div>
-            <div id="payday" class="panel-collapse collapse ">
+            <div id="wages" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <p>Yes. Each position (work for person A and person B) can have a different wage/rate. Ask about this before you start to get paid to expect how much money you wil receive.</p>
