--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ img {
                     <a data-toggle="collapse" data-parent="#accordion" href="#payroll">1.  Where is my payroll information? </a>
                 </h4>
             </div>
-            <div id="payroll" class="panel-collapse collapse in">
+            <div id="payroll" name="payroll" class="panel-collapse collapse in">
                 <div class="panel-body">
                     </p>
 <ul>
@@ -111,7 +111,7 @@ img {
                     <a data-toggle="collapse" data-parent="#accordion" href="#exempt">2.  How do I change my number of dependencies/exemptions?</a>
                 </h4>
             </div>
-            <div id="exempt" class="panel-collapse collapse ">
+            <div id="exempt" name="exempt" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <p>A <a href="http://www.irs.gov/pub/irs-pdf/fw4.pdf">W-4 form</a> describes the number of dependencies/exemptions you have. This is important because payroll will tax you differently depending on the number of dependencies. Dependencies are most commonly children, but you may have other exemptions.</p>
@@ -127,7 +127,7 @@ img {
                     <a data-toggle="collapse" data-parent="#accordion" href="#paystubs">3.  Where are my pay stubs?</a>
                 </h4>
             </div>
-            <div id="paystubs" class="panel-collapse collapse ">
+            <div id="paystubs" name="paystubs" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <p>First, go to your payroll information as described <a href="#payroll">here</a>. Then</p>
@@ -141,7 +141,7 @@ img {
                     <a data-toggle="collapse" data-parent="#accordion" href="#direct_deposit">4.  How can I do direct deposit?</a>
                 </h4>
             </div>
-            <div id="direct_deposit" class="panel-collapse collapse ">
+            <div id="direct_deposit" name="direct_deposit" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <p>First, go to your payroll information as described <a href="#payroll">here</a>. Then</p>
@@ -157,7 +157,7 @@ img {
                     <a data-toggle="collapse" data-parent="#accordion" href="#where_info">5.  How do I remember where to find this info?</a>
                 </h4>
             </div>
-            <div id="where_info" class="panel-collapse collapse ">
+            <div id="where_info" name="where_info" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <ul>
@@ -173,7 +173,7 @@ img {
                     <a data-toggle="collapse" data-parent="#accordion" href="#w2">6. Where do I get my W-2 for taxes?</a>
                 </h4>
             </div>
-            <div id="w2" class="panel-collapse collapse ">
+            <div id="w2" name="w2" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <ul>
@@ -191,7 +191,7 @@ img {
                     <a data-toggle="collapse" data-parent="#accordion" href="#payday">7. When do I get paid?</a>
                 </h4>
             </div>
-            <div id="payday" class="panel-collapse collapse ">
+            <div id="payday" name="payday" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <p>First off, go to <a href="http://ssc.jhmi.edu/hr_payroll/deadlines.html"><a href="http://ssc.jhmi.edu/hr_payroll/deadlines.html" class="uri">http://ssc.jhmi.edu/hr_payroll/deadlines.html</a></a> to know when pay periods occur. There should be the current year and 3 choices:</p>
@@ -208,7 +208,7 @@ img {
                     <a data-toggle="collapse" data-parent="#accordion" href="#hourly_salary">8. What's the difference between hourly and salary payments?</a>
                 </h4>
             </div>
-            <div id="hourly_salary" class="panel-collapse collapse ">
+            <div id="hourly_salary" name="hourly_salary" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <p>This is one of the most confusing concepts. Most importantly, at the end of the year <em>YOU WILL GET THE SAME AMOUNT OF MONEY</em> if you work the same number of hours at a fixed rate.</p>
@@ -243,7 +243,7 @@ Number of hours/week × wage per hour × 52 weeks / 26 weeks
                     <a data-toggle="collapse" data-parent="#accordion" href="#wages">8. Can you have different wages/rates for different jobs?</a>
                 </h4>
             </div>
-            <div id="wages" class="panel-collapse collapse ">
+            <div id="wages" name="wages" class="panel-collapse collapse ">
                 <div class="panel-body">
                     </p>
 <p>Yes. Each position (work for person A and person B) can have a different wage/rate. Ask about this before you start to get paid to expect how much money you wil receive.</p>
